--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,22 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.paw]
+version = "1.0"
+
+[dependencies.structopt]
+version = "0.3"
+features = ["paw"]
+
+[dependencies.csv]
+version = "1.1"
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
+
+[dependencies.thiserror]
+version = "1.0"
+
+[dev-dependencies.tempfile]
+version = "3.3"
