--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[test]]
+name = "krct"
+harness = false
+
 [dependencies.paw]
 version = "1.0"
 
@@ -24,3 +28,16 @@ version = "1.0"
 
 [dev-dependencies.tempfile]
 version = "3.3"
+
+[dev-dependencies.async-trait]
+version = "0.1"
+
+[dev-dependencies.cucumber]
+version = "0.12"
+
+[dev-dependencies.tokio]
+version = "1.17"
+features = ["macros", "rt-multi-thread", "time"]
+
+[dev-dependencies.pretty_assertions]
+version = "1.1"
