--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 name = "krct"
 harness = false
 
+[[bench]]
+name = "benchmark"
+harness = false
+
 [dependencies.paw]
 version = "1.0"
 
@@ -41,3 +45,9 @@ features = ["macros", "rt-multi-thread", "time"]
 
 [dev-dependencies.pretty_assertions]
 version = "1.1"
+
+[dev-dependencies.criterion]
+version = "0.3"
+
+[dev-dependencies.rand]
+version = "0.8"
